# askama-demo

./: Cargo.toml  README.md
examples/: plan.yml  simple.html
src/: main.rs
templates/: simple.html
