[package]
name = "trip-render"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["serde-yaml"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde", "wasmbind", "android-tzdata", "now"] }
chrono-tz = { version = "0.9.0", features = ["serde", "filter-by-regex"] }
serde = { version = "1.0.205", features = ["derive", "rc"] }
serde_yaml = "0.9.34"

